trunk/Source/include/ODEImport.hpp



typedef float TdReal;


typedef float *PdReal;



typedef System::StaticArray<float, 16> TdRealArray;


typedef TdRealArray *PdRealArray;


typedef System::StaticArray<float, 4> TdVector3;


typedef TdVector3 *PdVector3;


typedef System::StaticArray<float, 12> TdMatrix3;



struct TdxGeom;

typedef TdxGeom *PdxGeom;


struct TdxWorld;

typedef TdxWorld *PdxWorld;



struct TdxBody;

typedef TdxBody *PdxBody;


struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject BaseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};



class DELPHICLASS TBodyList;

struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};



struct DECLSPEC_DRECORD TdContactGeom
{
public:
	TdVector3 pos;
	TdVector3 normal;
	float depth;
	TdxGeom *g1;
	TdxGeom *g2;
	int side1;
	int side2;
};


typedef void __cdecl (*TdNearCallback)(void * data, PdxGeom o1, PdxGeom o2);


struct TdxSpace;

typedef TdxSpace *PdxSpace;


typedef System::StaticArray<float, 65536> TdRealHugeArray;


typedef TdRealHugeArray *PdRealHugeArray;



struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *Body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};



class DELPHICLASS TGeomList;

struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};


//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode_single.dll"

extern "C" void __cdecl dBodyDestroy(const PdxBody Body);

extern "C" void __cdecl dGeomDestroy(const PdxGeom Geom);

extern "C" int __cdecl dGeomGetClass(const PdxGeom Geom);

extern "C" PdxGeom __cdecl dCreateGeomTransform(const PdxSpace Space);

extern "C" PdxGeom __cdecl dCreateBox(const PdxSpace Space, const float lx, const float ly, const float lz);

extern "C" PdxGeom __cdecl dCreateCylinder(const PdxSpace Space, float r, float lz);

extern "C" PdxGeom __cdecl dCreatePlane(const PdxSpace Space, const float a, const float b, const float c, const float d);

extern "C" PdxGeom __cdecl dCreateSphere(const PdxSpace Space, const float radius);

extern "C" PdxGeom __cdecl dCreateRay(const PdxSpace Space, float length);

extern "C" int __cdecl dCollide(PdxGeom o1, PdxGeom o2, int flags, TdContactGeom &Contact, int Skip);

extern "C" void __cdecl dSpaceCollide(const PdxSpace Space, void * data, TdNearCallback callback);

extern "C" void __cdecl dSpaceCollide2(PdxGeom o1, PdxGeom o2, void * data, TdNearCallback callback);

extern "C" void __cdecl dClosestLineSegmentPoints(float const *a1, float const *a2, float const *b1, float const *b2, float *cp1, float *cp2);

extern "C" int __cdecl dBoxTouchesBox(float const *_p1, float const *R1, float const *side1, float const *_p2, float const *R2, float const *side2);

extern "C" float __cdecl dMaxDifference(PdReal A, PdReal B, int n, int m);

extern "C" void __cdecl dMakeRandomVector(float *n1, int a, float f);

extern "C" int __cdecl dAreConnected(PdxBody a, PdxBody b);

extern "C" int __cdecl dAreConnectedExcluding(PdxBody a, PdxBody b, TdJointTypeNumbers joint_type);

extern "C" void __cdecl dMakeRandomMatrix(PdRealArray A, int n, int m, float range);

extern "C" void __cdecl dClearUpperTriangle(PdRealArray A, int n);

extern "C" unsigned __cdecl dRandGetSeed(void);

extern "C" void __cdecl dRandSetSeed(const unsigned s);

extern "C" int __cdecl dRandInt(const int n);

extern "C" float __cdecl dRandReal(void);

extern "C" int __cdecl dTestRand(void);

extern "C" void __cdecl dTestMatrixComparison(void);

extern "C" void __cdecl dTestSolveLCP(void);

extern PACKAGE int dSphereClass;

extern PACKAGE int dBoxClass;

extern PACKAGE int dCylinderClass;

extern PACKAGE int dPlaneClass;

extern PACKAGE int dRayClass;

extern PACKAGE int dGeomTransformClass;

extern PACKAGE int dTriMeshClass;

extern PACKAGE bool DisabledDebugGeom;

extern PACKAGE float __fastcall dDot(const PdVector3 a, const PdVector3 b)/* overload */;

extern PACKAGE float __fastcall dDot(float const *a, float const *b)/* overload */;

extern PACKAGE float __fastcall dDOT14(float const *a, float const *b)/* overload */;

extern PACKAGE float __fastcall dDOT14(const PdRealArray a, const PdRealArray b)/* overload */;

extern PACKAGE void __fastcall dMULTIPLY0_331(float *A, float const *B, float const *C);

extern PACKAGE void __fastcall dMULTIPLY0_333(float *A, float const *B, float const *C);

extern PACKAGE TdVector3 __fastcall Vector3ScalarMul(float const *a, const float Scalar);

extern PACKAGE TdVector3 __fastcall Vector3ADD(float const *a, float const *b);

extern PACKAGE TdVector3 __fastcall Vector3SUB(float const *a, float const *b);

extern PACKAGE float __fastcall Vector3Length(float const *a);

extern PACKAGE TdVector3 __fastcall Vector3Cross(float const *V1, float const *V2);

extern PACKAGE TdVector3 __fastcall Vector3Make(const float x, const float y, const float z);

extern PACKAGE void __fastcall VerifyDelphiODE(PdxBody Body, PdxGeom Geom);